Adds example aas-jsonata-mqtt w/ 3 use-cases: sending a property, a submodel and a AAS to a MQTT broker using the event trigger
Signed-off-by: Mateus Molina <mateus.molina@iese.fraunhofer.de>

--- a/basyx.components.databridge.examples/pom.xml
+++ b/basyx.components.databridge.examples/pom.xml
@@ -21,6 +21,7 @@
 		<module>basyx.components.databridge.examples.hono-jsonata-aas</module>
 		<module>basyx.components.databridge.examples.kafka-jsonatamultiple-aas</module>
 		<module>basyx.components.databridge.examples.activemq-jsonata-aas</module>
+		<module>basyx.components.databridge.examples.aas-jsonata-mqtt</module>
 		<module>basyx.components.databridge.examples.mqtt-jsonata-aas</module>
 		<module>basyx.components.databridge.examples.httpserver</module>
 		<module>basyx.components.databridge.examples.opcua-jsonata-aas</module>
