--- a/.github/workflows/maven-run-tests-for-databridge-component.yml
+++ b/.github/workflows/maven-run-tests-for-databridge-component.yml
@@ -5,7 +5,7 @@ name: BaSyx Java DataBridge CI with Maven
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, development ]
 
 jobs:
   build:
