--- a/basyx.components.databridge/pom.xml
+++ b/basyx.components.databridge/pom.xml
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<basyx.databridge.executable>basyx.components.databridge.executable.UpdaterExecutable</basyx.databridge.executable>
+		<basyx.databridge.executable>basyx.components.databridge.executable.DatabridgeExecutable</basyx.databridge.executable>
 	</properties>
 
 	<!-- Define additional plugins that are not included by default -->
@@ -118,7 +118,6 @@
 								<contextDir>${project.basedir}</contextDir>
 								<args>
 									<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-									<PORT>${BASYX_CONTAINER_PORT}</PORT>
 								</args>
 							</build>
 						</image>
@@ -148,8 +147,7 @@
 					<envVars>
 						<BASYX_IMAGE_TAG>${project.version}</BASYX_IMAGE_TAG>
 						<BASYX_IMAGE_NAME>${BASYX_IMAGE_NAME}</BASYX_IMAGE_NAME>
-						<BASYX_CONTAINER_NAME>${BASYX_CONTAINER_NAME}</BASYX_CONTAINER_NAME>
-						<BASYX_CONTAINER_PORT>${BASYX_CONTAINER_PORT}</BASYX_CONTAINER_PORT>
+						<VOLUME_MAPPING>${project.basedir}/src/test/resources/mqtt/databridge</VOLUME_MAPPING>
 					</envVars>
 				</configuration>
 				<executions>
@@ -160,13 +158,6 @@
 							<goal>up</goal>
 						</goals>
 					</execution>
-					<execution>
-						<id>docker-compose-down</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>down</goal>
-						</goals>
-					</execution>
 				</executions>
 			</plugin>
 
@@ -175,6 +166,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.0.0-M7</version>
+				<configuration>
+					<systemPropertyVariables>
+						<VOLUME_MAPPING>${project.basedir}/src/test/resources/mqtt/databridge</VOLUME_MAPPING>
+					</systemPropertyVariables>
+					<includes>
+						<include>**/ITTestUpdaterMqtt.java</include>
+					</includes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
