Adds docker compose down execution
Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/basyx.components.databridge/pom.xml
+++ b/basyx.components.databridge/pom.xml
@@ -158,6 +158,13 @@
 							<goal>up</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>docker-compose-down</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>down</goal>
+						</goals>
+					</execution>
 				</executions>
 			</plugin>
 
