--- a/basyx.components.databridge.core/pom.xml
+++ b/basyx.components.databridge.core/pom.xml
@@ -54,7 +54,13 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-jetty -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jetty</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -75,10 +81,10 @@
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
 		</dependency>
-        <dependency>
-            <groupId>org.eclipse.basyx</groupId>
-            <artifactId>basyx.components.lib</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.eclipse.basyx</groupId>
+			<artifactId>basyx.components.lib</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+	</dependencies>
 </project>
