--- a/basyx.components.databridge.examples/pom.xml
+++ b/basyx.components.databridge.examples/pom.xml
@@ -21,10 +21,13 @@
 		<module>basyx.components.databridge.examples.hono-jsonata-aas</module>
 		<module>basyx.components.databridge.examples.kafka-jsonatamultiple-aas</module>
 		<module>basyx.components.databridge.examples.activemq-jsonata-aas</module>
+		<module>basyx.components.databridge.examples.activemq-jsonata-delegator</module>
 		<module>basyx.components.databridge.examples.mqtt-jsonata-aas</module>
 		<module>basyx.components.databridge.examples.httpserver</module>
 		<module>basyx.components.databridge.examples.opcua-jsonata-aas</module>
+		<module>basyx.components.databridge.examples.opcua-jsonata-jackson-delegator</module>
 		<module>basyx.components.databridge.examples.httppolling-jsonata-aas</module>
+		<module>basyx.components.databridge.examples.httppolling-jsonata-delegator</module>
 		<module>basyx.components.databridge.examples.prometheus-jsonata-aas</module>
 	</modules>
 
