Updates version of container to 1.0.0-milestone-01
Signed-off-by: Frank Schnicke <frank.schnicke@iese.fraunhofer.de>

--- a/basyx.components.databridge/src/test/resources/.env
+++ b/basyx.components.databridge/src/test/resources/.env
@@ -14,7 +14,7 @@ BASYX_IMAGE_NAME=eclipsebasyx/databridge
 # ##################
 # The image tag of the image that is build for this component
 
-BASYX_IMAGE_TAG=0.0.1-SNAPSHOT
+BASYX_IMAGE_TAG=1.0.0-milestone-01
 
 # ##################
 # Container Name
