--- a/.github/workflows/maven-run-tests-for-databridge-component.yml
+++ b/.github/workflows/maven-run-tests-for-databridge-component.yml
@@ -61,5 +61,7 @@ jobs:
       run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.opcua-jsonata-aas/pom.xml
     - name: Test HTTP Polling
       run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.httppolling-jsonata-aas/pom.xml
+    - name: Test HTTP Polling Delegator
+      run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.httppolling-jsonata-delegator/pom.xml
     - name: Test DataBridge Executable
       run: mvn test -f basyx.components.databridge/pom.xml
