Implements delegator component (#133)
* Implements delegator component

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

* Removes consumer route builder implementation

- Now only producer route would be created
- Refactors code
- Removes ActiveMQ and OPCUA examples
- Adds Httppolling delegator example to Github CI

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

* Refactors code

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

* Refactors response class name

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/basyx.components.databridge.examples/pom.xml
+++ b/basyx.components.databridge.examples/pom.xml
@@ -25,6 +25,7 @@
 		<module>basyx.components.databridge.examples.httpserver</module>
 		<module>basyx.components.databridge.examples.opcua-jsonata-aas</module>
 		<module>basyx.components.databridge.examples.httppolling-jsonata-aas</module>
+		<module>basyx.components.databridge.examples.httppolling-jsonata-delegator</module>
 		<module>basyx.components.databridge.examples.prometheus-jsonata-aas</module>
 	</modules>
 
