--- a/basyx.components.databridge.examples/basyx.components.databridge.examples.opcua-jsonata-aas/pom.xml
+++ b/basyx.components.databridge.examples/basyx.components.databridge.examples.opcua-jsonata-aas/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>basyx.components.databridge.examples.opcua-aas</artifactId>
 	<name>OPCUA to AAS data loader</name>
-	<description>An Integration example using opc-ua as a data source and aas sink</description>
+	<description>An Integration example using timer as a trigger, opc-ua as a data source and aas sink</description>
 
 
 	<packaging>jar</packaging>
@@ -72,6 +72,13 @@
     		<artifactId>jackson-datatype-jsr310</artifactId>
     		<version>2.14.1</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.eclipse.basyx</groupId>
+            <artifactId>basyx.components.databridge.camel-timer</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 		
 		<!-- BaSyx SDK -->
 		<dependency>
