--- a/basyx.components.databridge.examples/basyx.components.databridge.examples.mqtt-jsonata-aas/pom.xml
+++ b/basyx.components.databridge.examples/basyx.components.databridge.examples.mqtt-jsonata-aas/pom.xml
@@ -66,12 +66,21 @@
 			<artifactId>basyx.components.databridge.transformer.camel-jsonata</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+		
 		<!-- BaSyx SDK -->
 		<dependency>
 			<groupId>org.eclipse.basyx</groupId>
 			<artifactId>basyx.sdk</artifactId>
 			<version>1.2.0</version>
+		</dependency>
+
+		<!-- BaSyx SDK tests -->
+		<dependency>
+			<groupId>org.eclipse.basyx</groupId>
+			<artifactId>basyx.sdk</artifactId>
+			<version>1.3.0</version>
+			<classifier>tests</classifier>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Depends on the components library -->
@@ -100,6 +109,7 @@
 			<groupId>io.moquette</groupId>
 			<artifactId>moquette-broker</artifactId>
 			<version>0.16</version>
+			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
