--- a/basyx.components.databridge.core/pom.xml
+++ b/basyx.components.databridge.core/pom.xml
@@ -28,6 +28,16 @@
 				<artifactId>maven-source-plugin</artifactId>
 				<version>3.2.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M8</version>
+				<configuration>
+					<excludes>
+						<exclude>**/MongoPopulatorTool.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -91,6 +101,7 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-junit5</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
