--- a/basyx.components.databridge/docker-compose.yml
+++ b/basyx.components.databridge/docker-compose.yml
@@ -12,6 +12,12 @@ services:
         condition: service_healthy
       aas:
         condition: service_healthy
+    healthcheck:
+      test: wget --no-verbose --tries=1 databridge:8085/health || exit 1
+      interval: 20s
+      retries: 3
+      start_period: 10s
+      timeout: 10s
 
   aas:
     build: 
@@ -21,9 +27,6 @@ services:
       - 4001:4001
     volumes:
       - ${VOLUME_MAPPING}/databridge:/usr/share/config
-    depends_on:
-      mqtt:
-        condition: service_healthy
     healthcheck:
       test: wget --no-verbose --tries=1 --spider aas:4001/health || exit 1
       interval: 20s
