--- a/basyx.components.databridge.camel-hono/pom.xml
+++ b/basyx.components.databridge.camel-hono/pom.xml
@@ -124,6 +124,7 @@
 				<plugin>
 					<groupId>org.apache.camel</groupId>
 					<artifactId>camel-component-maven-plugin</artifactId>
+					<version>3.14.0</version>
 					<executions>
 						<execution>
                         <?m2e ignore?>
