--- a/basyx.components.databridge.camel-hono/pom.xml
+++ b/basyx.components.databridge.camel-hono/pom.xml
@@ -15,6 +15,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<camel.version>3.14.0</camel.version>
 	</properties>
 
 	<dependencyManagement>
@@ -22,7 +23,7 @@
 			<dependency>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-bom</artifactId>
-				<version>3.20.1</version>
+				<version>${camel.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -124,6 +125,7 @@
 				<plugin>
 					<groupId>org.apache.camel</groupId>
 					<artifactId>camel-component-maven-plugin</artifactId>
+					<version>${camel.version}</version>
 					<executions>
 						<execution>
                         <?m2e ignore?>
