Adds PLC4x component in github CI
Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/.github/workflows/maven-run-tests-for-databridge-component.yml
+++ b/.github/workflows/maven-run-tests-for-databridge-component.yml
@@ -41,6 +41,8 @@ jobs:
       run: mvn install -f basyx.components.databridge.camel-prometheus/pom.xml
     - name: Install DataBridge Component-Camel-Timer
       run: mvn install -f basyx.components.databridge.camel-timer/pom.xml
+    - name: Install DataBridge Component-Camel-PLC4X
+      run: mvn install -f basyx.components.databridge.camel-plc4x/pom.xml
     - name: Install DataBridge Component-Camel-JSONata
       run: mvn install -f basyx.components.databridge.transformer.camel-jsonata/pom.xml
     - name: Install DataBridge Component-Camel-JSONJackson
