--- a/basyx.components.databridge.camel-plc4x/pom.xml
+++ b/basyx.components.databridge.camel-plc4x/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eclipse.digitaltwin.basyx</groupId>
-	<artifactId>basyx.components.databridge.transformer.camel-jsonjackson</artifactId>
+	<artifactId>basyx.components.databridge.camel-plc4x</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Camel Json Jackson component</name>
-	<description>Camel Json Jackson Integration from internal camel component	</description>
+	<name>Camel PLC4X</name>
+	<description>PLC4X integration using camel</description>
 
 	<packaging>jar</packaging>
 
@@ -35,17 +35,28 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>2.0.7</version>
+			<version>2.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>basyx.components.databridge.core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-plc4x -->
 		<dependency>
-    		<groupId>org.apache.camel</groupId>
-    		<artifactId>camel-jackson</artifactId>
-    		<version>3.20.2</version>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-plc4x</artifactId>
+			<version>3.20.2</version>
 		</dependency>
+		
+		<!-- JUnit 4 for running JUnit tests -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
