Adds example scenario for PLC4X
- Modifies the PLC4X EndpointConfig

Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/.github/workflows/maven-run-tests-for-databridge-component.yml
+++ b/.github/workflows/maven-run-tests-for-databridge-component.yml
@@ -65,5 +65,7 @@ jobs:
       run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.httppolling-jsonata-aas/pom.xml
     - name: Test HTTP Polling Delegator
       run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.httppolling-jsonata-delegator/pom.xml
+    - name: Test PLC4X Jackson Jsonata AAS
+      run: mvn test -f basyx.components.databridge.examples/basyx.components.databridge.examples.plc4x-jsonata-aas/pom.xml
     - name: Test DataBridge Executable
       run: mvn test -f basyx.components.databridge/pom.xml
