Updates scope as test for plc4x example dependency
Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/basyx.components.databridge/pom.xml
+++ b/basyx.components.databridge/pom.xml
@@ -161,6 +161,7 @@
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>basyx.components.databridge.examples.plc4x-jsonata-aas</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
