--- a/databridge.examples/databridge.examples.httppolling-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.httppolling-jsonata-aas/pom.xml
@@ -45,32 +45,32 @@
 
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
-            <artifactId>basyx.components.databridge.core</artifactId>
+            <artifactId>databridge.core</artifactId>
+			<version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.digitaltwin.basyx</groupId>
+            <artifactId>databridge.component.camel-aas</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
-            <artifactId>basyx.components.databridge.camel-aas</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.digitaltwin.basyx</groupId>
-            <artifactId>basyx.components.databridge.camel-httppolling</artifactId>
+            <artifactId>databridge.component.camel-httppolling</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
        <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
-            <artifactId>basyx.components.databridge.transformer.camel-jsonata</artifactId>
+            <artifactId>databridge.component.camel-jsonata</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
-            <artifactId>basyx.components.databridge.camel-timer</artifactId>
+            <artifactId>databridge.component.camel-timer</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
