--- a/databridge.component/databridge.component.camel-http/pom.xml
+++ b/databridge.component/databridge.component.camel-http/pom.xml
@@ -41,8 +41,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
-			<artifactId>basyx.components.databridge.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>databridge.core</artifactId>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
