--- a/databridge.component/databridge.component.camel-plc4x/pom.xml
+++ b/databridge.component/databridge.component.camel-plc4x/pom.xml
@@ -42,8 +42,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
-			<artifactId>basyx.components.databridge.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>databridge.core</artifactId>
+			<version>${revision}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-plc4x -->
