--- a/databridge.component/databridge.component.camel-prometheus/pom.xml
+++ b/databridge.component/databridge.component.camel-prometheus/pom.xml
@@ -57,12 +57,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
-			<artifactId>basyx.components.databridge.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>databridge.core</artifactId>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
-			<artifactId>basyx.components.databridge.camel-httppolling</artifactId>
+			<artifactId>databridge.component.camel-httppolling</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
