--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,6 @@ basyx.components.databridge.examples/kafka-single-broker-server/zk-single-kafka-
 *.moquette_uuid
 
 ### META-INF ###
-**/META-INF/*
+**/MANIFEST.MF
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,java,eclipse
